--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mensimanvar.github.io/reactdemo",
+  "homepage": "http://mensimanvar.github.io/video-demo",
   "name": "twilio-video-app-react",
   "version": "0.9.0",
   "private": true,
