--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "body-parser": "^1.20.1",
     "concurrently": "^6.0.0",
     "copyfiles": "2.4.1",
     "cross-env": "^7.0.2",
